--- a/themes/ajaxian/theme.css
+++ b/themes/ajaxian/theme.css
@@ -38,7 +38,7 @@ body {
     width: 720px;
     margin: 0 auto 2.5em;
     padding: 0 15px;
-    background: #fff;
+    background-color: #fff;
     border: solid #815CB4;
     border-width: 0 3px;
     border-bottom: 2px solid #74627a;
@@ -55,7 +55,7 @@ body {
 #footer {
     position: relative;
     padding: 5px;
-    background: #fff3ec;
+    background-color: #fff3ec;
     border: 1px solid #e9e9e9;
     border-bottom: none;
     -moz-border-radius: 4px 4px 0 0;
@@ -64,7 +64,7 @@ body {
 #main {
     margin: 15px 0;
     padding: 12px;
-    background: #dfdbdb;
+    background-color: #dfdbdb;
     border: 1px solid #ccc;
     -moz-border-radius: 8px;
 }
@@ -72,7 +72,7 @@ body {
 #frame {
     position: relative;
     padding: 2px 15px 20px;
-    background: #000;
+    background-color: #000;
     color: #fff;
     -moz-border-radius: 8px;
 }
@@ -109,7 +109,7 @@ hr {
     height: 1px;
     margin: 1em 0 0.5em;
     border: none;
-    background: #555;
+    background-color: #555;
     color: #555;
 }
 
@@ -142,15 +142,15 @@ select {
 #searchCriteria {
     width: 190px;
     padding: 1px 2px 2px;
-    background: #f6f6ff;
+    background-color: #f6f6ff;
     border: 1px solid #48a;
 }
 #searchCriteria:hover {
-    background: #fff;
+    background-color: #fff;
     border-color: #59d;
 }
 #searchCriteria:focus {
-    background: #ffd;
+    background-color: #ffd;
 }
 
 .gbBreadCrumb {
@@ -200,7 +200,7 @@ select {
     clear: both;
     margin: 0.6em 0;
     padding: 8px 0 8px 2px;
-    background: #0f0f0f;
+    background-color: #0f0f0f;
     border: solid #333;
     border-width: 1px 0;
 }
@@ -210,7 +210,7 @@ select {
 }
 
 .gbNavigator a:hover {
-    background: #292929;
+    background-color: #292929;
     -moz-border-radius: 5px;
 }
 
@@ -308,7 +308,7 @@ h2 {
     left: 105px;
     cursor: nw-resize;
     z-index: 10;
-    background: #111;
+    background-color: #111;
 }
 
 #imagedatablock {
@@ -358,7 +358,7 @@ h2 {
     margin: 0;
     padding: 3px 210px 3px 250px;
     list-style: none inside;
-    background: #000;
+    background-color: #000;
     opacity: 0.6;
     -moz-opacity: 0.6;
     filter: alpha(opacity=40);	/* Lower opacity for IE since the controls don't hide */
@@ -374,7 +374,7 @@ h2 {
     width: 40px;
     margin: 0;
     padding: 0;
-    background: #000;
+    background-color: #000;
     border: none;
     text-align: center;
     cursor: pointer;
@@ -392,7 +392,7 @@ h2 {
     width: 540px;
     margin: -110px auto 0;
     padding: 6px 40px;
-    background: #000;
+    background-color: #000;
     opacity: 0.85;
     -moz-opacity: 0.85;
     filter: alpha(opacity=85);
@@ -411,7 +411,7 @@ h2 {
 #gsThumbMatrix a .giThumbnail {
     height: 40px;
     width: 40px;
-    background: #666;
+    background-color: #666;
     border: 1px solid #333;
 }
 
@@ -419,7 +419,7 @@ h2 {
     height: 48px;
     width: 48px;
     margin: -4px;
-    background: #fff;
+    background-color: #fff;
     border: 1px solid #fb2;
 }
 
@@ -470,7 +470,7 @@ h2 {
 
 #warning {
     margin: 1em 0;
-    background: #fe9;
+    background-color: #fe9;
     border: 1px solid #c95;
     color: #c00;
 }
@@ -497,11 +497,11 @@ h2 {
 }
 
 .gbDataTable td.gbOdd {
-    background: #191919;
+    background-color: #191919;
 }
 
 .gbBusy {
-    background: #114499 !important;
+    background-color: #114499 !important;
 }
 
 /* Exif data */
@@ -521,7 +521,7 @@ h2 {
 }
 
 .block-exif-ExifInfo div a:hover {
-    background: #0f0f0f;
+    background-color: #0f0f0f;
     border-bottom: 1px solid #ccc;
     text-decoration: none;
 }
@@ -565,7 +565,7 @@ h2 {
 
 #gsSidebar {
     padding: 10px 8px 10px 10px;
-    background: #191919;
+    background-color: #191919;
     -moz-border-radius: 10px 0 0 10px;
 }
 
@@ -583,7 +583,7 @@ h2 {
 .gbTabBar .giSelected {
     margin: 0 4px 0 0;
     padding: 3px 10px 3px;
-    background: #393333;
+    background-color: #393333;
     border: 1px solid #333;
     border-bottom: none;
     -moz-border-radius: 4px;
@@ -594,7 +594,7 @@ h2 {
 .gbTabBar span a {
     margin: 0 4px 0 0;
     padding: 3px 6px 6px;
-    background: #000;
+    background-color: #000;
     border: 1px solid #333;
     border-bottom: none;
     -moz-border-radius: 4px 4px 0 0;
@@ -603,7 +603,7 @@ h2 {
 
 .gbTabBar span a:hover {
     margin-bottom: -1px;
-    background: #0f0f0f;
+    background-color: #0f0f0f;
     border-bottom: 1px solid #ccc;
     text-decoration: none;
 }
@@ -614,7 +614,7 @@ h2 {
 
 #gsContent .gbDataTable th {
     padding: 3px 6px;
-    background: #333;
+    background-color: #333;
     border-bottom: 1px solid #444;
 }
 
@@ -631,7 +631,7 @@ h2 {
 }
 
 #gsContent .gbDataTable .gbOdd {
-    background: #111;
+    background-color: #111;
 }
 
 #gsContent textarea {
@@ -674,7 +674,7 @@ h2.giError {
     position: absolute;
     top: 60px;
     left: 10px;
-    background: #fdf;
+    background-color: #fdf;
     color: #060;
     text-align: left;
     font: 11px "Lucida Sans Unicode";
@@ -690,40 +690,19 @@ h2.giError {
 
 #msgarea p {
     padding: 0 3px 0 8px;
-    background: #fdf;
+    background-color: #fdf;
 }
 
 .autoCompleteShadow {
-    position: absolute;
-    margin: .3em;
-    z-index: 5;
-    background: #a0a0a0;
+    background-color: #a0a0a0;
 }
 
 .autoCompleteContainer {
-    position: relative;
-    bottom: 4px;
-    right: 4px;
     border: 1px solid #404040;
-    background: #000;
-    overflow: hidden;
-    display: none;
+    background-color: #000;
 }
 
-.autoCompleteContainer ul {
-    position: relative;
-    padding: 5px 0;
-    list-style: none;
-}
-
-.autoCompleteContainer li {
-    padding: 0 5px;
-    cursor: default;
-    white-space: nowrap;
-    display: list-item;
-}
-
-.autoCompleteContainer li.highlight {
-    background: #eee;
+.autoCompleteContainer li.yui-ac-highlight {
+    background-color: #eee;
     color: #111;
 }
