--- a/themes/carbon/theme.css
+++ b/themes/carbon/theme.css
@@ -300,22 +300,17 @@ div.gbTabBar span.o {
   background-image: url('../carbon/images/table_right_on.gif');
 }
 
-.autoCompleteBackground {
-  border: 1px solid #ccc;
-  border-top-style: none;
-  margin: 0;
+.autoCompleteShadow {
+    background-color: #333 !important;
 }
 
-.autoCompleteHighlight { text-decoration: underline; }
-
-.autoCompleteNotSelected {
-  background-color: #eee;
-  padding: 3px 4px 3px 17px;
+.autoCompleteContainer {
+    border: 1px solid #404040;
+    background-color: #fff;
 }
 
-.autoCompleteSelected {
-  background-color: #eee;
-  padding: 3px 4px 3px 17px;
+.autoCompleteContainer li.yui-ac-highlight {
+    background-color: #ffc;
 }
 
 #gallery .gbMarkupBar input { font-size: 1.1em; }
