--- a/themes/siriux/theme.css
+++ b/themes/siriux/theme.css
@@ -85,7 +85,7 @@ hr {
 }
 
 .gallery-thumb img {
-	background: #f3f3f3;
+	background-color: #f3f3f3;
 	border: 1px solid #ddd;
 	padding: 7px;
 	margin: 1px;
@@ -149,7 +149,7 @@ hr {
 	padding: 0.5em 1.5em;
 	margin: 1.5em 3em;
 	border: 1px solid #ddd;
-	background: #ffe;
+	background-color: #ffe;
 	font-size: 1.2em;
 }
 
@@ -161,7 +161,7 @@ div.gallery-photo {
 }
 
 img.gallery-photo {
-	background: #f3f3f3;
+	background-color: #f3f3f3;
 	border: 1px solid #ddd;
 	padding: 7px;
 	-moz-border-radius: 3px;
@@ -224,7 +224,7 @@ table.gbDataTable td.gbEven {
 	clear: both;
 	border-top: 3px solid #9c9;
 	border-bottom: 1px solid #9c9;
-	background: #efe;
+	background-color: #efe;
 	margin: 1.5em 0;
 	padding: 0.5em;
 }
@@ -243,7 +243,7 @@ table.gbDataTable td.gbEven {
 #toolbar {
 	clear: both;
 	border: 1px solid #ccc;
-	background: #f1f1f1;
+	background-color: #f1f1f1;
 	margin: 1em 0;
 	padding: 0.5em;
 }
@@ -311,7 +311,7 @@ table.gbDataTable td.gbEven {
 .gbTabBar a {
 	border: 1px solid #ccc;
 	padding: 0.2em 1em;
-	background: #eee;
+	background-color: #eee;
 	margin: 0 0.2em;
 }
 
@@ -321,49 +321,28 @@ table.gbDataTable td.gbEven {
 	border: 1px solid #ccc;
 	border-bottom: 1px solid #fff;
 	font-weight: bold;
-	background: #fff;
+	background-color: #fff;
 }
 
 .giUpdated, .giNew {
 	font: normal 9px Arial;
 	text-transform: uppercase;
 	color: #222;
-	background: #ffea88;
+	background-color: #ffea88;
 	padding: 0 3px;
 	margin-left: 3px;
 }
 
 .autoCompleteShadow {
-    position: absolute;
-    margin: .3em;
-    z-index: 5;
-    background: #a0a0a0;
+    background-color: #a0a0a0;
 }
 
 .autoCompleteContainer {
-    position: relative;
-    bottom: 4px;
-    right: 4px;
     border: 1px solid #404040;
-    background: #fff;
-    overflow: hidden;
-    display: none;
+    background-color: #fff;
 }
 
-.autoCompleteContainer ul {
-    position: relative;
-    padding: 5px 0;
-    list-style: none;
-}
-
-.autoCompleteContainer li {
-    padding: 0 5px;
-    cursor: default;
-    white-space: nowrap;
-    display: list-item;
-}
-
-.autoCompleteContainer li.highlight {
-    background: #38c;
+.autoCompleteContainer li.yui-ac-highlight {
+    background-color: #38c;
     color: #fff;
 }
