--- a/themes/slider/theme.css
+++ b/themes/slider/theme.css
@@ -450,37 +450,16 @@ div.gbTabBar span.o {
 }
 
 .autoCompleteShadow {
-    position: absolute;
-    margin: .3em;
-    z-index: 5;
-    background: #a0a0a0;
+    background-color: #a0a0a0;
 }
 
 .autoCompleteContainer {
-    position: relative;
-    bottom: 4px;
-    right: 4px;
     border: 1px solid #404040;
-    background: #fff;
-    overflow: hidden;
-    display: none;
+    background-color: #fff;
 }
 
-.autoCompleteContainer ul {
-    position: relative;
-    padding: 5px 0;
-    list-style: none;
-}
-
-.autoCompleteContainer li {
-    padding: 0 5px;
-    cursor: default;
-    white-space: nowrap;
-    display: list-item;
-}
-
-.autoCompleteContainer li.highlight {
-    background: #eee;
+.autoCompleteContainer li.yui-ac-highlight {
+    background-color: #eee;
 }
 
 #gallery .gbMarkupBar input {
